<resources>
    <string name="app_name">Scouty</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="signup">Sign up</string>
    <string name="login">Log in</string>
    <string name="progress_login">Logging you in&#8230;</string>
    <string name="progress_signup">Signing you up&#8230;</string>
    <string name="posting_header">Post up a Deal!</string>
    <string name="progress_post">Posting&#8230;</string>
    <string name="progress_deal">Finding Deals&#8230;</string>
    <string name="search_distance">Search Radius</string>
    <string name="settings_distance_format">%d feet</string>
    <string name="character_count_placeholder">0/140</string>

    <string name="lbl_you_are_at">YOU ARE AT</string>
    <string name="btn_get_location">GET MY LOCATION</string>
    <string name="btn_start_location_updates">START LOCATION UPDATES</string>
    <string name="btn_stop_location_updates">STOP LOCATION UPDATES</string>
    <string name="about_motto">Share and discover deals with Scouty!</string>
    <string name="about">These deals not only help you but also help promote local businesses around you!</string>
    <string name="about_future">Things to expect in 2.0:</string>
    <string name="about_feature_1">- Filter types of businesses</string>
    <string name="about_feature_2">- Individual profile page and reward system</string>
    <string name="about_feature_3">- Increased search radius (not limited to current location)</string>
    <string name="about_feature_4">- More descriptive details for deals along with the number of deals displayed</string>
</resources>
